testsuite/tests/polykinds/T16762b.stderr

T16762b.hs:8:11: error:
    Illegal kind: forall k. Type
    Did you mean to enable PolyKinds?
